# golfgame

./: .env.example  .gitignore  .secrets.baseline  CLAUDE.md  Dockerfile  INSTALL.md  README.md  V2_BUILD_PLAN.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  pyproject.toml  pyvenv.cfg
client/: ANIMATIONS.md  admin.css  admin.html  admin.js  animation-queue.js  app.js  card-animations.js  card-manager.js  index.html  leaderboard.js  replay.js  state-differ.js  style.css  timing-config.js
docs/: ANIMATION-FLOWS.md  BUG-kicked-ball-position.md
docs/v2/: V2_00_MASTER_PLAN.md  V2_01_EVENT_SOURCING.md  V2_02_PERSISTENCE.md  V2_03_USER_ACCOUNTS.md  V2_04_ADMIN_TOOLS.md  V2_05_STATS_LEADERBOARDS.md  V2_06_REPLAY_EXPORT.md  V2_07_PRODUCTION.md  V2_08_GAME_LOGGING.md
docs/v3/: V3_00_MASTER_PLAN.md  V3_01_DEALER_ROTATION.md  V3_02_DEALING_ANIMATION.md  V3_03_ROUND_END_REVEAL.md  V3_04_COLUMN_PAIR_CELEBRATION.md  V3_05_FINAL_TURN_URGENCY.md  V3_06_OPPONENT_THINKING.md  V3_07_SCORE_TALLYING.md  V3_08_CARD_HOVER_SELECTION.md  V3_09_KNOCK_EARLY_DRAMA.md  V3_10_COLUMN_PAIR_INDICATOR.md  V3_11_SWAP_ANIMATION_IMPROVEMENTS.md  V3_12_DRAW_SOURCE_DISTINCTION.md  V3_13_CARD_VALUE_TOOLTIPS.md  V3_14_ACTIVE_RULES_CONTEXT.md  V3_15_DISCARD_PILE_HISTORY.md  V3_16_REALISTIC_CARD_SOUNDS.md  V3_17_MOBILE_PORTRAIT_LAYOUT.md  V3_18_POSTGRES_STORAGE_EFFICIENCY.md  refactor-ai.md  refactor-main-game.md  refactor-misc.md  refactor-remaining.md
scripts/: deploy-staging.sh  deploy.sh  dev-server.sh  docker-build.sh  install.sh
server/: .env.example  RULES.md  ai.py  auth.py  config.py  constants.py  game.py  game_analyzer.py  game_log.py  handlers.py  logging_config.py  main.py  requirements.txt  room.py  score_analysis.py  simulate.py  test_ai_decisions.py  test_analyzer.py  test_auth.py  test_game.py  test_handlers.py  test_house_rules.py  test_maya_bug.py  test_room.py  test_v3_features.py
server/middleware/: __init__.py  ratelimit.py  request_id.py  security.py
server/models/: __init__.py  events.py  game_state.py  user.py
server/routers/: __init__.py  admin.py  auth.py  health.py  replay.py  stats.py
server/scripts/: create_admin.py
server/services/: __init__.py  admin_service.py  auth_service.py  email_service.py  game_logger.py  matchmaking.py  ratelimit.py  rating_service.py  recovery_service.py  replay_service.py  spectator.py  stats_service.py
server/stores/: __init__.py  event_store.py  pubsub.py  state_cache.py  user_store.py
server/tests/: __init__.py  test_event_replay.py  test_persistence.py  test_replay.py
tests/e2e/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.json
tests/e2e/bot/: actions.ts  ai-brain.ts  golf-bot.ts  index.ts  state-parser.ts
tests/e2e/health/: animation-tracker.ts  freeze-detector.ts  index.ts
tests/e2e/specs/: full-game.spec.ts  stress.spec.ts  v3-features.spec.ts  visual.spec.ts
tests/e2e/utils/: index.ts  selectors.ts  (+1 more)
tui_client/: pyproject.toml
tui_client/src/tui_client/: __init__.py  __main__.py  app.py  client.py  config.py  models.py  styles.tcss
tui_client/src/tui_client/screens/: __init__.py  confirm.py  connect.py  game.py  lobby.py  splash.py
tui_client/src/tui_client/widgets/: __init__.py  card.py  hand.py  play_area.py  player_box.py  scoreboard.py  status_bar.py
(+3 files in other folders)
